# cybernest

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  compose.yaml  package.json  pnpm-workspace.yaml  pyproject.toml
apps/agent/: Dockerfile.dev  Dockerfile.prod  README.md  main.py  pyproject.toml
apps/agent/agent/: __init__.py
apps/agent/agent/fingerprinting/: __init__.py
apps/agent/agent/fingerprinting/auth/: __init__.py
apps/agent/agent/fingerprinting/cli/: __init__.py
apps/agent/agent/fingerprinting/communication/: __init__.py
apps/agent/agent/fingerprinting/config/: settings.py
apps/agent/agent/fingerprinting/discovery/: __init__.py
apps/agent/agent/fingerprinting/fingerprinting/: __init__.py
apps/agent/agent/fingerprinting/scheduler/: __init__.py
apps/agent/agent/fingerprinting/telemetry/: __init__.py
apps/agent/agent/plugins/: __init__.py  base.py  fingerbank.py  manager.py  nvd.py  registry.py  scapy.py  shodan.py  zeek.py
apps/agent/tests/: test_agent.py
apps/api/: Dockerfile.dev  Dockerfile.prod  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: .gitkeep
apps/api/app/: main.py
apps/api/app/api/v1/: __init__.py  api.py
apps/api/app/core/: __init__.py  config.py
apps/api/app/database/: base.py  base_class.py  session.py
apps/api/app/models/: __init__.py  host.py  user.py
apps/api/app/repositories/: base.py  host.py  user.py
apps/api/app/schemas/: host.py  user.py
apps/api/app/services/: host.py  user.py
apps/api/tests/: test_api.py
(+28 files in other folders)
