[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent"
version = "0.1.0"
description = "CyberNest Host Scan and Fingerprinting Daemon Agent"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "httpx>=0.27.0",
    "click>=8.1.0",
    "shared-python",
]

[tool.uv.sources]
shared-python = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["agent"]
